--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "recoil": "^0.7.7",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
