--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@tanstack/react-query-devtools": "^5.62.11",
     "apexcharts": "^4.3.0",
     "axios": "^1.7.9",
-    "next": "15.1.3",
+    "next": "^15.2.0-canary.19",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
