--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint src"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.11",
@@ -26,7 +26,7 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "22.10.5",
     "@types/react": "19.0.2",
-    "eslint": "^9",
+    "eslint": "^9.19.0",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
